<resources>
    <string name="app_name">RainTracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_log">Add Log</string>
    <string name="elipses" translatable="false">…</string>
    <string name="notes">Notes</string>
    <string name="rain_in_mm">Rain in mm</string>
    <string name="rain_mm">Rain (mm)</string>
    <string name="dd_mm_yyyy" translatable="false">dd/mm/yyyy</string>
    <string name="select_date">Select Date</string>
    <string name="add_rain_log">Add Rain Log</string>
    <string name="chart">Chart</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="set_time">Set Time</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="month_year">Month Year</string>
    <string name="preferences">Preferences</string>
    <string name="import_export">Import/Export</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="rained_xx_mm">Rained XX mm</string>
    <string name="note">Note: --------------------</string>
</resources>