<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:gravity="center|top">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/preferences"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="26sp"
                    android:gravity="start"/>

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/nav_settings"
                    android:paddingTop="8dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:gravity="center|top">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/import_export"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="26sp"
                    android:gravity="start"/>

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/nav_settings"
                    android:paddingTop="8dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:gravity="center|top">

                <TextView
                    android:id="@+id/textView91"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/feedback"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="26sp"
                    android:gravity="start"/>

                <ImageView
                    android:id="@+id/imageView31"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/nav_settings"
                    android:paddingTop="8dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:gravity="center|top">

                <TextView
                    android:id="@+id/textView72"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/about"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="26sp"
                    android:gravity="start"/>

                <ImageView
                    android:id="@+id/imageView51"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/nav_settings"
                    android:paddingTop="8dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>